--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
-    "vue": "^3.5.17"
+    "@ionic/vue": "^8.6.2",
+    "@ionic/vue-router": "^8.6.2",
+    "@microsoft/signalr": "^8.0.7",
+    "vue": "^3.5.17",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
